--- a/mybot_2dnav/src/local_costmap_params.yaml
+++ b/mybot_2dnav/src/local_costmap_params.yaml
@@ -1,5 +1,5 @@
 local_costmap:
-  global_frame: odom
+  global_frame: /robot_pose_ekf/odom_combined
   robot_base_frame: base_link
   update_frequency: 5.0
   publish_frequency: 2.0
