--- a/navigation_stack/costmap_common_params.yaml
+++ b/navigation_stack/costmap_common_params.yaml
@@ -1,11 +1,11 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
-footprint: [[1, 0], [-1, 0], [0, 1], [0, -1]]
+footprint: [[-0.2, 0.2], [0.2, 0.2], [0.2, -0.2], [-0.2, -0.2]]
 #robot_radius: 
 inflation_radius: 0.55
 
-observation_sources: laser_node 
+observation_sources: gazebo 
 
-laser_node: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+gazebo: {sensor_frame: hokuyo, data_type: LaserScan, topic: mybot/laser/scan, marking: true, clearing: true}
 
 
