--- a/navigation_stack/global_costmap_params.yaml
+++ b/navigation_stack/global_costmap_params.yaml
@@ -1,5 +1,6 @@
 global_costmap:
   global_frame: /map
-  robot_base_frame: base_link
+  robot_base_frame: chassis
   update_frequency: 5.0
-  static_map: true
+  static_map: false
+  rolling_window: true
