--- a/navigation_stack/CMakeLists.txt
+++ b/navigation_stack/CMakeLists.txt
@@ -7,11 +7,7 @@ project(navigation_stack)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  laserpub
-  odompub
-  robot_setup_tf
-)
+find_package(catkin REQUIRED COMPONENTS)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
