--- a/navigation_stack/base_local_planner_params.yaml
+++ b/navigation_stack/base_local_planner_params.yaml
@@ -1,12 +1,13 @@
 TrajectoryPlannerROS:
-  max_vel_x: 1.8
-  min_vel_x: 0.44
+  max_vel_x: 0.447
+  min_vel_x: 0
   max_vel_theta: 1
+  min_vel_theta: -1 
   min_in_place_vel_theta: 0.4
 
   acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_x: 0.88
+  acc_lim_y: 0.88
 
   holonomic_robot: false
   meter_scoring: true
