--- a/navigation_stack/costmap_common_params.yaml
+++ b/navigation_stack/costmap_common_params.yaml
@@ -4,8 +4,8 @@ footprint: [[-0.4, 0.4], [0.4, 0.4], [0.4, -0.4], [-0.4, -0.4]]
 #robot_radius: 
 inflation_radius: 0.55
 
-observation_sources: gazebo 
+observation_sources: laser_scan_sensor point_cloud_sensor
 
-gazebo: {sensor_frame: hokuyo, data_type: LaserScan, topic: mybot/laser/scan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
-
+point_cloud_sensor: {sensor_frame: cloud, data_type: PointCloud, topic: cloud, marking: true, clearing: true}
