add config for white line layer

--- a/navigation_stack/local_costmap_params.yaml
+++ b/navigation_stack/local_costmap_params.yaml
@@ -8,3 +8,7 @@ local_costmap:
   width: 6.0
   height: 6.0
   resolution: 0.05
+  plugins:
+    - {name: white_lines, type: "obstacle_detector::WhiteLineCostmapLayer"}
+    - {name: obstacles, type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation, type: "costmap_2d::InflationLayer"}
