--- a/navigation_stack/base_local_planner_params.yaml
+++ b/navigation_stack/base_local_planner_params.yaml
@@ -38,6 +38,7 @@ TebLocalPlannerROS:
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
+ inflation_dist: 0.65
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
