--- a/navigation_stack/costmap_common_params.yaml
+++ b/navigation_stack/costmap_common_params.yaml
@@ -1,11 +1,13 @@
-obstacle_range: 2.5
-raytrace_range: 3.0
-footprint: [[-0.4572, 0.3048], [0.4572, 0.3048], [0.4572, -0.3048], [-0.4572, -0.3048]]
+#footprint: [[-0.4572, 0.3048], [0.4572, 0.3048], [0.4572, -0.3048], [-0.4572, -0.3048]]
 #robot_radius:
 inflation_radius: 0.7
 
-observation_sources: laser_scan_sensor point_cloud_sensor
+observation_sources: gazebo
 
-laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+#laser_scan_sensor point_cloud_sensor
 
-point_cloud_sensor: {sensor_frame: cloud, data_type: PointCloud, topic: cloud, marking: true, clearing: true}
+#laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+#point_cloud_sensor: {sensor_frame: cloud, data_type: PointCloud, topic: cloud, marking: true, clearing: true}
+
+gazebo: {sensor_frame: hokuyo, data_type: LaserScan, topic: mybot/laser/scan, marking: true, clearing: true}
