--- a/navigation_stack/global_costmap_params.yaml
+++ b/navigation_stack/global_costmap_params.yaml
@@ -1,8 +1,10 @@
 global_costmap:
   global_frame: /map
-  robot_base_frame: base_link
+  robot_base_frame: chassis
   update_frequency: 5.0
   static_map: false
   rolling_window: true
   width: 100
   height: 100
+  obstacle_range: 2.5
+  raytrace_range: 3.0
