--- a/navigation_stack/costmap_common_params (copy).yaml
+++ b/navigation_stack/costmap_common_params (copy).yaml
@@ -5,7 +5,7 @@ footprint: [[-0.4572, -1.14], [0.4572, -1.14], [0.4572, 0.1], [-0.4572, 0.1]]
 inflation_radius: 0.7
 plugins:
   - {name: static_map,       type: "costmap_2d::StaticLayer"}
-  - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacles,        type: "costmap_2d::ObstaclelLayer"}
   - {name: voxel,            type: "costmap_2d::VoxelLayer"}
 
 obstacles:
