--- a/navigation_stack/costmap_common_params.yaml
+++ b/navigation_stack/costmap_common_params.yaml
@@ -5,13 +5,7 @@ footprint: [[-0.4572, -1.14], [0.4572, -1.14], [0.4572, 0.1], [-0.4572, 0.1]]
 inflation_radius: 0.7
 plugins:
   - {name: static_map,       type: "costmap_2d::StaticLayer"}
-  - {name: obstacles,        type: "costmap_2d::ObstacleLayer"}
   - {name: voxel,            type: "costmap_2d::VoxelLayer"}
-
-obstacles:
-  observation_sources: camera_sensor laser_scan_sensor
-  camera_sensor: {sensor_frame: zed_center, data_type: PointCloud, topic: cloud, marking: true, clearing: true}
-  laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
 static_map:
   observation_sources: camera_sensor laser_scan_sensor
@@ -19,8 +13,9 @@ static_map:
   laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
 voxel:
-  observation_sources: depth_sensor
-  depth_sensor: {data_type: PointCloud2, sensor_frame: zed_depth_camera, clearing: true, marking: true, topic: camera/cloud }
+  observation_sources: camera_depth_sensor laser_depth_sensor
+  camera_depth_sensor: {sensor_frame: zed_depth_camera, data_type: PointCloud2, topic: camera/cloud, marking: true, clearing: true}
+  laser_depth_sensor: {sensor_frame: laser, data_type: LaserScan, topic: velodyne_points, marking: true, clearing: true}
 
 
 
