--- a/navigation_stack/costmap_common_params.yaml
+++ b/navigation_stack/costmap_common_params.yaml
@@ -7,15 +7,8 @@ plugins:
   - {name: static_map,       type: "costmap_2d::StaticLayer"}
   - {name: voxel,            type: "costmap_2d::VoxelLayer"}
 
-static_map:
-  observation_sources: camera_sensor laser_scan_sensor
-  camera_sensor: {sensor_frame: zed_center, data_type: PointCloud, topic: cloud, marking: true, clearing: true}
-  laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
-
 voxel:
-  observation_sources: camera_depth_sensor laser_depth_sensor
-  camera_depth_sensor: {sensor_frame: zed_depth_camera, data_type: PointCloud2, topic: camera/cloud, marking: true, clearing: true}
+  observation_sources: laser_depth_sensor
   laser_depth_sensor: {sensor_frame: laser, data_type: LaserScan, topic: velodyne_points, marking: true, clearing: true}
-
 
 
